Implemented simple module injection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "json.schemas":
     [
         {
-            "fileMatch": ["/manifest.json"],
+            "fileMatch": ["src/manifest.json"],
             "url": "https://json.schemastore.org/chrome-manifest"
         }
     ]
